ignore large zip file containing skv files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 __pycache__
 *.skv
 *.skv.mat
+automotive_suite-v0.0.0-recorder_viewer-win64/RecordedMovies/Alex_exercise_recovery/drive-download-20220715T213617Z-001.zip
