--- a/imx520_sample/CMakeSettings.json
+++ b/imx520_sample/CMakeSettings.json
@@ -13,17 +13,32 @@
       "variables": [
         {
           "name": "iu456_binary",
-          "value": "C:/Users/MNI Lab/Documents/GitHub/prgrm/facial-blood-ToF/imx520_sample/dependencies/iu456/bin/Windows7_x64_VS2015/iu456.dll",
+          "value": "C:/Users/Muhsinun/Desktop/Muhsinun/Repositories/GitHub/facial-bloodflow-tof_live/imx520_sample/dependencies/iu456/bin/Windows7_x64_VS2015/iu456.dll",
           "type": "FILEPATH"
         },
         {
           "name": "iu456_LIBRARIES",
-          "value": "C:/Users/MNI Lab/Documents/GitHub/prgrm/facial-blood-ToF/imx520_sample/dependencies/iu456/lib/Windows7_x64_VS2015/iu456.lib",
+          "value": "C:/Users/Muhsinun/Desktop/Muhsinun/Repositories/GitHub/facial-bloodflow-tof_live/imx520_sample/dependencies/iu456/lib/Windows7_x64_VS2015/iu456.lib",
           "type": "FILEPATH"
         },
         {
           "name": "minicalc_binary",
-          "value": "C:/Users/MNI Lab/Documents/GitHub/prgrm/facial-blood-ToF/imx520_sample/dependencies/iu456/bin/Windows7_x64_VS2015/minicalc.dll",
+          "value": "C:/Users/Muhsinun/Desktop/Muhsinun/Repositories/GitHub/facial-bloodflow-tof_live/imx520_sample/dependencies/iu456/bin/Windows7_x64_VS2015/minicalc.dll",
+          "type": "FILEPATH"
+        },
+        {
+          "name": "CMAKE_INSTALL_PREFIX",
+          "value": "C:/Users/Muhsinun/Desktop/Muhsinun/Repositories/GitHub/facial-bloodflow-tof_live/imx520_sample/out/install/x64-Debug (default)",
+          "type": "PATH"
+        },
+        {
+          "name": "_matlab_main_tmp",
+          "value": "_matlab_main_tmp-NOTFOUND",
+          "type": "FILEPATH"
+        },
+        {
+          "name": "_matlab_mex_tmp",
+          "value": "_matlab_mex_tmp-NOTFOUND",
           "type": "FILEPATH"
         }
       ]
