--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 *.skv
 *.skv.mat
 automotive_suite-v0.0.0-recorder_viewer-win64/RecordedMovies/Alex_exercise_recovery/drive-download-20220715T213617Z-001.zip
+skv_to_mat/.build/
+skv_to_mat/build/
+skv_to_mat/out/
 
 # This is a sample .gitignore file that's useful for C++ projects.
 #
