--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ skv_to_mat/out/
 vs_output.mat
 skvs/mat/auto_bfsig.mat
 skvs/mat/20221003-Sparsh_Fex_bfsig.mat
+*.skv.bin
 
 # This is a sample .gitignore file that's useful for C++ projects.
 #
