ignore pycharm project files

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ vs_output.mat
 skvs/mat/auto_bfsig.mat
 skvs/mat/20221003-Sparsh_Fex_bfsig.mat
 *.skv.bin
+.idea/
 
 # This is a sample .gitignore file that's useful for C++ projects.
 #
