--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ skvs/mat/20221003-Sparsh_Fex_bfsig.mat
 *.skv.bin
 .idea/
 other_skvs/
-
+build/
 # This is a sample .gitignore file that's useful for C++ projects.
 #
 # Add this file to the root of your git repo.  Name it .gitignore
