--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 .env/
+Data/
+Data_archived/
+win_env/
 *.skv
 *.skv.mat
 automotive_suite-v0.0.0-recorder_viewer-win64/RecordedMovies/Alex_exercise_recovery/drive-download-20220715T213617Z-001.zip
