--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,8 @@
 *.skv
 *.skv.mat
 automotive_suite-v0.0.0-recorder_viewer-win64/RecordedMovies/Alex_exercise_recovery/drive-download-20220715T213617Z-001.zip
-skv_to_mat/.build/
-skv_to_mat/build/
-skv_to_mat/out/
-vs_output.mat
-skvs/mat/auto_bfsig.mat
-skvs/mat/20221003-Sparsh_Fex_bfsig.mat
-*.skv.bin
-.idea/
-other_skvs/
+*.bin
+auto_bfsig.mat
 
 # This is a sample .gitignore file that's useful for C++ projects.
 #
